# cc_atoms

./: .editorconfig  .gitignore  ARCHITECTURE.md  CC_ATOMS_REFACTOR_SPEC.md  CURRENT_SESSION_2025-11-29.md  HANDOFF.md  README.md  REVIEW_REQUEST.md  TESTING.md  TEST_OUTPUTS_INVENTORY.md  TEST_RESULTS_SUMMARY.md  USER_GUIDE.md  USER_PROMPT.md  atom.py.backup  phase5_results.md  pyproject.toml  session_log.md  setup.py
autodatagen/: README.md  home_oracle.py
autodatagen/tests/: run_tests.py  test_home_oracle.py
cli/: ARCHITECTURE.md  CLAUDE_CLI_RESEARCH.md  CONTRIBUTING.md  README.md  README_VERIFICATION.md  USERGUIDE.md  USER_PROMPT.md  pyproject.toml  requirements.txt  setup.py
cli/cc/: __init__.py  __main__.py  app.py  conversation.py  main.py  print_mode.py  repl.py
cli/cc/api/: __init__.py  client.py  models.py
cli/cc/commands/: __init__.py
cli/cc/config/: __init__.py  paths.py  settings.py
cli/cc/hooks/: __init__.py  hooks.py
cli/cc/session/: __init__.py  manager.py  storage.py
cli/cc/tools/: __init__.py  base.py  bash.py  cc_analytics.py  conversation_analyzer.py  dashboard.py  edit.py  executor.py  glob.py  grep.py  live_monitor.py  notebook.py  productivity_coach.py  read.py  todo.py  webfetch.py  websearch.py  write.py
cli/cc/ui/: __init__.py  colors.py  prompt.py  renderer.py  spinner.py
cli/cc/utils/: __init__.py
cli/tests/: __init__.py  conftest.py  test_analytics.py  test_api.py  test_app.py  test_config.py  test_conversation.py  test_main.py  test_session.py  test_tools.py  test_ui.py
docs/: delegation-guide.md
src/cc_atoms/: __init__.py  cli.py  config.py
src/cc_atoms/atom_core/: __init__.py  claude_runner.py  context.py  memory.py  prompt_loader.py  retry.py  runtime.py  task_analyzer.py
src/cc_atoms/prompts/: ATOM.md  ATOM_CREATE_TOOL.md  ATOM_SESSION_ANALYZER.md  GUI_CONTROL.md  SOUNDFORGE.md
src/cc_atoms/prompts/meta_agents/: CRITIC.md  PLANNER.md  VERIFIER.md
src/cc_atoms/tools/: __init__.py
src/cc_atoms/tools/atom_create_tool/: README.md  USER_PROMPT.md  __init__.py  atom_create_tool  atom_create_tool.bash.old  atom_create_tool.py
src/cc_atoms/tools/atom_create_tool/tests/: test_interactive.sh  test_python_interactive.sh
src/cc_atoms/tools/atom_gui/: ENHANCEMENT_SUMMARY.md  HIERARCHICAL_TREE_IMPLEMENTATION.md  HUMAN_FACTORS_ANALYSIS.md  IMPLEMENTATION_NOTES.md  ISSUE_REPORT.md  QUICKSTART.md  README.md  SAVE_FEATURE.md  TREE_VIEW_GUIDE.md  UNDO_REDO.md  USAGE.md  USER_PROMPT.md  __init__.py  atom_gui.py  atom_gui_original.py  session_log.md
src/cc_atoms/tools/atom_gui/core/: __init__.py  history.py  parser.py  saver.py  session.py
src/cc_atoms/tools/atom_gui/gui/: __init__.py  main_window.py
src/cc_atoms/tools/atom_gui/tests/: test_session_scanner.py
src/cc_atoms/tools/atom_session_analyzer/: CLI_TEST_REPORT.md  README.md  USER_PROMPT.md  __init__.py  atom_session_analyzer.bash.old  atom_session_analyzer.py
src/cc_atoms/tools/atom_session_analyzer/session_logs/: claude-conversation-2025-10-14-42fe0cd6.html  claude-conversation-2025-10-14-42fe0cd6.json  claude-conversation-2025-10-14-42fe0cd6.md
src/cc_atoms/tools/elysia_sync/: README.md  __init__.py  context_hook.py  elysia_sync.py
src/cc_atoms/tools/gui_control/: __init__.py  gui_control.py
src/cc_atoms/tools/multi_db_agent/: __init__.py  autonomous_agent.py  capability_registry.py  conversational_agent.py  home_indexer.py  intelligent_retrieval.py  meta_agent.py  orchestrator.py  router.py  search_gui.py  search_web.py  smart_search.py  workflow_engine.py
src/cc_atoms/tools/multi_db_agent/connectors/: __init__.py  elysia_connector.py  sql_connector.py  vector_connector.py
src/cc_atoms/tools/multi_db_agent/tests/: test_performance_comparison.py  test_search_backends.py
tests/: NEXT_TEST_STEPS.md  TEST_DOCUMENTATION.md  TEST_STATUS.md  run_all_tests.py  test_atom.py  test_atom_core.py  test_atom_gui.py  test_gui_control.py  test_gui_control_live.md  test_gui_control_news_curation.md  test_integration.py  test_memory.py  test_task_analyzer.py
tests/decomp_test/: CRITIQUE.md  README.md  USER_PROMPT.md  VERIFICATION.md  calculator.py
tests/decomp_test/.meta_verifier/: USER_PROMPT.md
tests/decomp_test/tests/: test_calculator.py
tests/decomp_test2/: ANALYSIS.md  DECOMPOSITION_SUMMARY.md  USER_PROMPT.md  greeter.py
tests/decomp_test2/step_1_analyze_the_target_code_module_to_understand_what_/: README.md  USER_PROMPT.md
tests/decomp_test2/step_2_create_test_file_with_imports_and_test_class_struc/: README.md  USER_PROMPT.md
tests/decomp_test2/step_3_write_unit_tests_for_core_functionality/: USER_PROMPT.md
tests/decomp_test2/step_4_write_edge_case_and_error_handling_tests/: USER_PROMPT.md
tests/decomp_test2/step_5_run_tests_and_fix_any_failures/: USER_PROMPT.md
tests/decomp_test2/tests/: __init__.py  test_greeter.py
tests/v3_live_test/: README.md  USER_PROMPT.md
tests/v3_test/: README.md  USER_PROMPT.md  simple_test.py
tests/v3_test/step_1_plan_and_design_appr/: USER_PROMPT.md
tests/v3_test/step_2_implement_core_funct/: USER_PROMPT.md
tests/v3_test/step_3_add_error_handling/: USER_PROMPT.md
tests/v3_test/step_4_write_tests/: USER_PROMPT.md
tests/v3_test/step_5_document_and_review/: USER_PROMPT.md
